// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Stack Horizontal 1`] = `
<div
  className="stack my-stack-class horizontal m"
  style={
    Object {
      "alignItems": "",
      "backgroundColor": "aquamarine",
      "flexWrap": "",
      "justifyContent": "",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "mediumpurple",
        "height": "200px",
        "width": "200px",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "mediumpurple",
        "height": "200px",
        "width": "200px",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "mediumpurple",
        "height": "200px",
        "width": "200px",
      }
    }
  />
</div>
`;

exports[`Storyshots Stack Responsive 1`] = `
<div
  className="stack my-stack-class vertical l"
  style={
    Object {
      "alignItems": "",
      "backgroundColor": "aquamarine",
      "flexWrap": "",
      "justifyContent": "",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "mediumpurple",
        "height": "200px",
        "width": "200px",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "mediumpurple",
        "height": "200px",
        "width": "200px",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "mediumpurple",
        "height": "200px",
        "width": "200px",
      }
    }
  />
</div>
`;

exports[`Storyshots Stack Sample Nav List 1`] = `
<div
  className="stack nav-list-container horizontal"
  style={
    Object {
      "alignItems": "",
      "flexWrap": "wrap",
      "justifyContent": "",
    }
  }
>
  <div
    className="stack group vertical m"
    style={
      Object {
        "alignItems": undefined,
        "flexWrap": undefined,
        "justifyContent": undefined,
      }
    }
  >
    <h3>
      Title
    </h3>
    <div
      className="stack vertical xs"
      style={
        Object {
          "alignItems": undefined,
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
    </div>
  </div>
  <div
    className="stack group vertical m"
    style={
      Object {
        "alignItems": undefined,
        "flexWrap": undefined,
        "justifyContent": undefined,
      }
    }
  >
    <h3>
      Title
    </h3>
    <div
      className="stack vertical xs"
      style={
        Object {
          "alignItems": undefined,
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
    </div>
  </div>
  <div
    className="stack group vertical m"
    style={
      Object {
        "alignItems": undefined,
        "flexWrap": undefined,
        "justifyContent": undefined,
      }
    }
  >
    <h3>
      Title
    </h3>
    <div
      className="stack vertical xs"
      style={
        Object {
          "alignItems": undefined,
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
    </div>
  </div>
  <div
    className="stack group vertical m"
    style={
      Object {
        "alignItems": undefined,
        "flexWrap": undefined,
        "justifyContent": undefined,
      }
    }
  >
    <h3>
      Title
    </h3>
    <div
      className="stack vertical xs"
      style={
        Object {
          "alignItems": undefined,
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
    </div>
  </div>
  <div
    className="stack group vertical m"
    style={
      Object {
        "alignItems": undefined,
        "flexWrap": undefined,
        "justifyContent": undefined,
      }
    }
  >
    <h3>
      Title
    </h3>
    <div
      className="stack vertical xs"
      style={
        Object {
          "alignItems": undefined,
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
    </div>
  </div>
  <div
    className="stack group vertical m"
    style={
      Object {
        "alignItems": undefined,
        "flexWrap": undefined,
        "justifyContent": undefined,
      }
    }
  >
    <h3>
      Title
    </h3>
    <div
      className="stack vertical xs"
      style={
        Object {
          "alignItems": undefined,
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
      <p>
        subheading
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Stack Vertical 1`] = `
<div
  className="stack my-stack-class vertical l"
  style={
    Object {
      "alignItems": "",
      "backgroundColor": "aquamarine",
      "flexWrap": "",
      "justifyContent": "",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "mediumpurple",
        "height": "200px",
        "width": "200px",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "mediumpurple",
        "height": "200px",
        "width": "200px",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundColor": "mediumpurple",
        "height": "200px",
        "width": "200px",
      }
    }
  />
</div>
`;
